...
            "state": "translated",
            "value": "Unavailable"
          }
        }
      }
    },
    "今天": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Today"
          }
...
            "state": "translated",
            "value": "History & Stats"
          }
        }
      }
    },
    "取消": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
...
            "state": "translated",
            "value": "Parent Settings"
          }
        }
      }
    },
    "家长验证": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Parent verification"
          }
...
            "state": "translated",
            "value": "Record a score"
          }
        }
      }
    },
    "记分": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Score"
          }
...
            "state": "translated",
            "value": "Couldn't save. Please try again."
          }
        }
      }
    },
    "开始": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Start"
          }
        }
      }
    },
    "跳过": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Skip"
          }
...
            "state": "translated",
            "value": "Continue"
          }
        }
      }
    },
    "欢迎使用「行为奖励」": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Welcome to Reward Stars"
          }
        }
      }
    },
    "用星星鼓励好行为": {
      "localizations": {
...
